--- a/src/sentinels.less
+++ b/src/sentinels.less
@@ -3,6 +3,13 @@
 @card-height: 332px * (@percent/100);
 body {
     background-color: #ddd;
+    margin: 0;
+}
+.section {
+    width: 100%;
+    height: @card-height*1.1;
+    display: block;
+    overflow: auto;
 }
 .card {
     display: inline-block;
