lodash + rearranging components

--- a/src/sentinels.less
+++ b/src/sentinels.less
@@ -5,7 +5,7 @@ body {
     background-color: #ddd;
     margin: 0;
 }
-.section {
+.zone {
     width: 100%;
     height: @card-height*1.1;
     display: block;
