force horizontal scroll of player zones

--- a/src/less/sentinels.less
+++ b/src/less/sentinels.less
@@ -9,7 +9,8 @@ body {
     width: 100%;
     height: @card-height*1.1;
     display: block;
-    overflow: auto;
+    white-space: nowrap;
+    overflow-x: auto;
 }
 .trash,
 .deck,
